# kiss

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  justfile  reset-immudb.sh  start-many-keepers.sh
.circleci/: config.yml
config/: base.yaml  dev.yaml  evil-not.yaml  evil.yaml  peer1.yaml  peer2.yaml  peer3.yaml  peer4.yaml  peer5.yaml  peer6.yaml  peer7.yaml  peer8.yaml  peer9.yaml
docs/: Abstract 2.md  Abstract Thesis.md  Abstract.md  ERD.md  KISS diagrams.drawio  Untitled Diagram.drawio  notes.md
docs/Report 1/: Report.tex  classicthesis-config.tex
docs/Report 1/FrontBackmatter/: DirtyTitlepage.tex
docs/Report 2/: Bibliography.bib  ClassicReport-blx.bib  ClassicReport.fdb_latexmk  ClassicReport.fls  ClassicReport.tex  ClassicReport.toc  README.md  TODO.tex  Tectonic.toml  classicthesis-config.tex
docs/Report 2/Chapters/: Chapter00-Abstract.tex  Chapter00-Nomenclature.tex  Chapter01-Introduction.tex  Chapter02-Related-Work.tex  Chapter05-Implementation.tex  Chapter06-Evaluation.tex
docs/Report 2/FrontBackmatter/: Contents.tex  Declaration.tex  Dedication.tex
docs/Thesis/: Tectonic.toml
docs/Thesis/src/: _preamble.tex  bibliography.bib  index.tex
docs/Thesis/src/chapters/: abstract.tex  analysis.tex  appendix.tex  bibliography.tex  conclusion.tex  evaluation.tex  future-work.tex  implementation.tex  introduction.tex  nomenclature.tex  notes.tex  prior-work.tex  related-work.tex  title.tex
docs/report/: Bibliography.bib  ClassicReport.aux  ClassicReport.bbl  ClassicReport.bcf  ClassicReport.blg  ClassicReport.run.xml  Report.tex  classicthesis-config.tex
docs/report/FrontBackmatter/: DirtyTitlepage.aux
old/common/src/: errors.rs  types.rs
old/keeper/config/: peer2.yaml
old/keeper/src/: main.rs
old/keeper/src/grpc/: mod.rs
old/keeper/src/p2p/: mod.rs  store.rs
old/keeper/src/storage/: docker.rs  local.rs
old/verifier/src/settings/: mod.rs
proto/: immudb.proto  kademlia.proto  kiss.proto
proto/google/: api  protobuf
src/: build.rs  main.rs
src/bench/: mod.rs
src/common/: Cargo.toml  build.rs
src/common/proto/: keeper.proto  verifier.proto
src/common/proto/google/: api  protobuf
src/common/src/: consts.rs  errors.rs  grpc.rs  hasher.rs  lib.rs  types.rs
src/grpc/: mod.rs
src/keeper/: Cargo.toml  build.rs
src/keeper/config/: base.yaml  peer2.yaml
src/keeper/src/: main.rs
src/keeper/src/grpc/: mod.rs
src/keeper/src/p2p/: controller.rs  mod.rs  store.rs  swarm.rs
src/keeper/src/settings/: mod.rs
src/keeper/src/storage/: docker.rs  local.rs  mod.rs
src/keeper/src/types/: mod.rs
src/ledger/: mod.rs
src/malice/: deleteall.rs  deletelast.rs  deleterandom.rs  mod.rs  none.rs
src/p2p/: controller.rs  memorystore.rs  mod.rs  peer_id.rs  store.rs  swarm.rs
src/settings/: mod.rs
src/storage/: local.rs  mod.rs
src/util/: consts.rs  debug.rs  errors.rs  grpc.rs  hasher.rs  mod.rs  types.rs
src/verifier/: Cargo.toml  build.rs  mod.rs  por.rs
src/verifier/config/: base.yaml
src/verifier/src/: main.rs
src/verifier/src/grpc/: keeper_client.rs  mod.rs
src/verifier/src/ledger/: mod.rs
src/verifier/src/p2p/: controller.rs  store.rs  swarm.rs
src/verifier/src/settings/: mod.rs
src/verifier/src/types/: mod.rs
src/verifier/src/verifier/: mod.rs
