[package]
name = "kiss"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
base64 = "0.21.0"
config = "0.13.3"
env_logger = "0.10.0"
error-chain = "0.12.4"
exitcode = "1.1.2"
hex = "0.4.3"
object_store = "0.7.0"
rust_docker = "0.1.1"
log = "0.4.17"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0.152"
serde_yaml = "0.9.18"
tonic = "0.10.0"
async-trait = "0.1.66"
runtime_injector = { version = "0.4.0", path = "submodules/runtime_injector/crates/runtime_injector" }
dill = "0.3.0"
prost = "0.12.0"
tower = "0.4.13"
libp2p-identity = { version = "0.2.3", features = ["ed25519"] }
thiserror = "1.0.39"
async-std = "1.12.0"
bs58 = "0.4.0"
smallvec = "1.10.0"
rand = "0.8.5"
quickcheck = "1.0.3"
tokio-stream = { version = "0.1.14", features = ["net"] }
libp2p = { version = "0.52.3", features = [
    "kad",
    "tokio",
    "tcp",
    "tls",
    "dns",
    "noise",
    "websocket",
    "yamux",
    "mdns",
    "macros",
    "request-response",
    "cbor",
] }
libp2p-kad = "0.44.4"
sha3 = "0.10.8"
prost-types = "0.12.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
time = "0.3.21"
bincode = "1.3.3"

[dev-dependencies]
env_logger = "0.10.0"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
futures-core = "0.3.28"
