[package]
name = "keeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
object_store = "0.5.4"
rust_docker = "0.1.1"
common = { path = "../common", version = "0.1.0" }
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
config = "0.13.3"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_yaml = "0.9.18"
tonic = "0.8.3"
async-trait = "0.1.66"
runtime_injector = "0.4.0"
dill = "0.3.0"
