[package]
name = "keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
error-chain = "0.12.4"
object_store = "0.5.4"
rust_docker = "0.1.1"
common = { path = "../common", version = "0.1.0" }
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
config = "0.13.3"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_yaml = "0.9.18"
tonic = "0.8.3"
async-trait = "0.1.66"
runtime_injector = "0.4.0"
dill = "0.3.0"
prost = "0.11.8"
tower = "0.4.13"
libp2p = { version = "0.51.1", features = ["kad", "tokio", "tcp", "tls", "dns", "noise", "mplex", "websocket", "yamux", "mdns", "macros"] }
libp2p-identity = { version = "0.1.0", features = ["ed25519"] }
thiserror = "1.0.39"
async-std = "1.12.0"
bs58 = "0.4.0"
base64 = "0.21.0"

[build-dependencies]
tonic-build = "0.8.3"
