[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
error-chain = "0.12.4"
object_store = "0.7.0"
rust_docker = "0.1.1"
common = { path = "../common", version = "0.1.0" }
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.14"
config = "0.13.3"
lazy_static = "1.4.0"
serde = "1.0.152"
serde_yaml = "0.9.18"
tonic = "0.10.0"
async-trait = "0.1.66"
runtime_injector = { version = "0.4.0", path = "../../submodules/runtime_injector/crates/runtime_injector" }
dill = "0.3.0"
prost = "0.12.0"
tower = "0.4.13"
libp2p = { version = "0.52.3", features = [
    "kad",
    "tokio",
    "tcp",
    "tls",
    "dns",
    "noise",
    "websocket",
    "yamux",
    "mdns",
    "macros",
] }
libp2p-identity = { version = "0.2.3", features = ["ed25519"] }
thiserror = "1.0.39"
async-std = "1.12.0"
bs58 = "0.4.0"
base64 = "0.21.0"
prost-types = "0.12.0"
uuid = { version = "1.3.3", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
] }
sha3 = "0.10.8"
hex = "0.4.3"
time = "0.3.21"

[build-dependencies]
tonic-build = "0.10.0"
